# openbuddy

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  Makefile  README.md
.github/: README.es.md  README.fr.md  README.ja.md  README.zh.md
openbuddy_server/: .gitignore  pyproject.toml
openbuddy_server/openbuddy/: auth.py  config.py  db.py  events.py  history.py  keychain.py  log.py  mdns.py  models.py  server.py
openbuddy_server/openbuddy/agent/: env.py  lifecycle.py  scrub.py
openbuddy_server/openbuddy/api/: agent_prompt.py  auth.py  config.py  devices.py  fs.py  history.py  keys.py  llm_config.py  permissions.py  prompts.py
openbuddy_server/openbuddy/hooks/: router.py
openbuddy_server/openbuddy/sfx/: gen.py
openbuddy_server/openbuddy/voice/: buffer.py  pipeline.py  qwen.py  sanitize.py  stt.py  tts.py
openbuddy_server/openbuddy/ws/: cardputer.py  protocol.py  webui.py
openbuddy_server/tests/: conftest.py  test_agent_env.py  test_agent_lifecycle.py  test_api_config.py  test_api_devices.py  test_api_fs.py  test_api_history.py  test_api_keys.py  test_api_prompts.py  test_auth.py  test_buffer.py  test_config.py  test_events.py  test_history.py  test_hooks.py  test_keychain.py  test_mdns.py  test_permissions_api.py  test_pipeline.py  test_qwen.py  test_sanitize.py  test_scrub.py  test_stt.py  test_tts.py  test_ws_cardputer.py  test_ws_mic_flow.py  test_ws_protocol.py  test_ws_webui.py
openbuddy_server/tests/smoke/: test_m27_smoke.py
openbuddy_webui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+87 files in other folders)
